test/controlplane/policies/k8s/manifests/knp-default-allow-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "knp-default-allow-egress"
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress
